feat: 实现多模型 ASR 支持，集成 SenseVoice 引擎
- 新增 ASR 引擎抽象层，支持 Zipformer 和 SenseVoice 两种引擎类型。
- 实现引擎切换功能，允许用户在运行时热切换 ASR 引擎而无需重启应用。
- 完善 VAD 和离线识别的集成，确保 SenseVoice 引擎能够进行高精度语音识别。
- 更新相关文档，增加多模型支持的使用说明和验收标准。

Story: 2-7

--- a/voice_capsule/lib/l10n/app_en.arb
+++ b/voice_capsule/lib/l10n/app_en.arb
@@ -12,6 +12,14 @@
   "trayExit": "Exit",
   "trayModelSwitchNotice": "Model switched, restart app to take effect",
 
+  "trayAsrEngine": "ASR Engine",
+  "trayEngineZipformer": "Zipformer (Streaming)",
+  "trayEngineSensevoice": "SenseVoice (Offline)",
+  "trayEngineSwitching": "Switching...",
+  "trayEngineSwitchSuccess": "Engine switched to {engine}",
+  "trayEngineSwitchFallback": "Switch failed, fallback to {engine}",
+  "trayModelSettings": "Model Settings",
+
   "wizardDownloading": "Downloading...",
   "wizardExtracting": "Extracting...",
   "wizardVerifying": "Verifying...",
