feat: 新增 Makefile 支持构建与管理项目
- 移除旧的 Makefile，新增项目级 Makefile，支持构建 Flutter 客户端和 Fcitx5 插件。
- 更新 .gitignore，移除 Makefile 的忽略规则。
- 在 main.dart 中优化 ASR 引擎类型转换，确保引擎切换时的兼容性。
- 增强错误处理，提供更清晰的用户反馈。
- 更新语言本地化，增加引擎状态和操作提示。

Story: 2-7

--- a/voice_capsule/lib/l10n/app_en.arb
+++ b/voice_capsule/lib/l10n/app_en.arb
@@ -19,6 +19,7 @@
   "trayEngineSwitchSuccess": "Engine switched to {engine}",
   "trayEngineSwitchFallback": "Switch failed, fallback to {engine}",
   "trayModelSettings": "Model Settings",
+  "trayEngineActual": "In Use",
 
   "wizardDownloading": "Downloading...",
   "wizardExtracting": "Extracting...",
