--- a/voice_capsule/lib/l10n/app_zh.arb
+++ b/voice_capsule/lib/l10n/app_zh.arb
@@ -21,6 +21,7 @@
   "trayEngineSwitchSuccess": "引擎已切换为 {engine}",
   "trayEngineSwitchFallback": "切换失败，已回退到 {engine}",
   "trayModelSettings": "模型设置",
+  "trayEngineActual": "当前使用",
 
   "wizardDownloading": "正在下载...",
   "wizardExtracting": "正在解压...",
