refactor: 统一模型引擎就绪状态检查逻辑
- 将模型管理器中的模型就绪状态检查方法重构为统一的 `isEngineReady` 方法，简化引擎状态判断逻辑。
- 更新相关服务和组件，使用新的方法检查引擎状态，确保在模型缺失时能够正确显示初始化向导。
- 增加 `hasAnyEngineReady` 方法，便于判断是否有任何引擎可用，提升用户体验。

Story: 3-7

--- a/voice_capsule/lib/l10n/app_en.arb
+++ b/voice_capsule/lib/l10n/app_en.arb
@@ -36,14 +36,14 @@
   "wizardPressHotkeyHint": "Press Right Alt to start voice input",
   "wizardStartUsing": "Start Using",
   "wizardTitle": "Voice Model Installation",
-  "wizardAutoDownloadDesc": "Automatically download and install model (~400MB)",
+  "wizardAutoDownloadDesc": "Automatically download and install model",
   "wizardManualInstallDesc": "Manually download and install model",
   "wizardAutoMode": "Auto Mode",
   "wizardManualMode": "Manual Mode",
   "wizardModelVerifyFailed": "No valid model detected, please confirm files are placed correctly",
   "wizardResumingDownload": "Detected downloaded file, preparing to verify...",
   "wizardFirstLaunch": "Nextalk First Launch",
-  "wizardModelSizeHint": "Voice model download required (~150MB)",
+  "wizardModelSizeHint": "Voice model download required",
   "wizardRecommended": "(Recommended)",
   "wizardManualInstallTitle": "Manual Install Model",
   "wizardStep1Download": "Download model file:",
