--- a/voice_capsule/lib/l10n/app_zh.arb
+++ b/voice_capsule/lib/l10n/app_zh.arb
@@ -38,14 +38,14 @@
   "wizardPressHotkeyHint": "按下 Right Alt 键开始语音输入",
   "wizardStartUsing": "开始使用",
   "wizardTitle": "语音模型安装",
-  "wizardAutoDownloadDesc": "自动下载安装模型 (约400MB)",
+  "wizardAutoDownloadDesc": "自动下载安装模型",
   "wizardManualInstallDesc": "手动下载并安装模型",
   "wizardAutoMode": "自动模式",
   "wizardManualMode": "手动模式",
   "wizardModelVerifyFailed": "未检测到有效模型，请确认文件已正确放置",
   "wizardResumingDownload": "检测到已下载文件，准备校验...",
   "wizardFirstLaunch": "Nextalk 首次启动",
-  "wizardModelSizeHint": "需要下载语音识别模型 (~150MB)",
+  "wizardModelSizeHint": "需要下载语音识别模型",
   "wizardRecommended": "(推荐)",
   "wizardManualInstallTitle": "手动安装模型",
   "wizardStep1Download": "下载模型文件:",
